--- a/src/app/main/main.container.html
+++ b/src/app/main/main.container.html
@@ -2,7 +2,11 @@
 
 [date]="date$|async"
 [result]="result$|async"
+[colors]="colors$|async"
 (askDate)="onAskDate()"
-(defEmp)="onDefEmp($event)" >
+(defEmp)="onDefEmp($event)"
+(sendColor)="onSendColor($event)"
+(remColor)="onRemColor($event)"
+(askColors)="onAskColors()" >
 
 </app-main-ui>
